# 13_brigade_coupes_rases

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Natura2000.csv  Natura2000.ipynb  README.md  cors.json  docker-compose.yml  pyproject.toml
analytics/: .gitignore  README.md  explore_dist_alert.ipynb  explore_sufosat.ipynb  pyproject.toml
analytics/data/: RegionsMetropole.geojson
analytics/data/geometries/: gdf_sample_clear_cuts.geojson
analytics/diagram/: Analytics Brigade Coupes Rases.xml
analytics/notebooks/: Natura2000 (1).ipynb  Test_utilisation_DBSCAN.ipynb  Test_utilisation_KNN.ipynb  Visualization_abusive_clear_cuts.ipynb  Visualization_abusive_clear_cuts_2018_2024.ipynb  Visualization_abusive_clear_cuts_2024.ipynb  explore_bdforet.ipynb  explore_dist_alert.ipynb  explore_sufosat.ipynb  explore_sufosat_nat2000_ign.ipynb  export_clearcuts.ipynb  prepare_cadastre.ipynb  prepare_ign_slope_raster.ipynb  prepare_sufosat.ipynb  prepare_sufosat_layer.ipynb  prepare_sufosat_v2_layer.ipynb  prepare_sufosat_v3_layer.ipynb  prepare_sufosat_v3_layer.py  stats_abusive_clear_cuts.ipynb  stats_bdforet.ipynb  stats_example_from_raster.ipynb
backend/: .env.development  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  clean_cities.py  common_seed.py  data-model.md  pyproject.toml  requirements.txt  seed_dev.py  seed_prd.py  update_ClearCutReport_with_anomaly.py
backend/.devcontainer/: devcontainer.json
backend/alembic/: env.py
backend/alembic/versions/: 00e6819cb4e2_replace_slope_area_ratio_percentage_.py  01ce59715a3d_migration.py  07204d7b80f9_migration.py  07b03ef0918b_migration.py  0f0afca3fb37_migration.py  19e644f11e20_added_index_on_clear_cuts_report_id.py  1de801c4268d_migration.py  223aeb833685_migration.py  342bfc046428_migration.py  41e62d8226ee_migration.py  442d0129d235_migration.py  4ae4ff0f990a_migration.py  4c91cfa8d4f2_migration.py  54824213c702_migration.py  5ccd539dde75_migration.py  6001c7f35a62_migration.py  628340fc4cec_migration.py  66add23d112a_migration.py  678f1b5ea40c_migration.py  73a55cff34d1_migration.py  7da0b1b74155_migration.py  8042be50cde3_migration.py  85cabf486cd1_migration.py  891e397cd11c_migration.py  8bdf51838f72_migration.py  8c4afffe03d1_migration.py  942347f79b19_migration.py  996d0b13fb1c_migration.py  9a447236a041_migration.py  9ad0592d67dd_add_image_fields_to_clear_cut_forms.py  9ba44a77af28_migration.py  9ebe91359050_migration.py  9fb464d00159_migration.py  b4363c1e2f3c_migration.py  b5935c34f9bd_migration.py  b78b399d47b5_migration.py  bbbb7adf9117_migration.py  ca2056783232_migration.py  ce379a6bd538_migration.py  d09d496c8f6e_migration.py  (+8 more)
backend/app/: config.py  database.py  deps.py  main.py  models.py
backend/app/common/: errors.py
backend/app/models/: clearcut.py  ecologicalZone.py  slope.py  watercourse.py
backend/app/routes/: clear_cuts.py  clear_cuts_forms.py  clear_cuts_map.py  clear_cuts_reports.py  clearcut.py  clearcuts.py  clearcuts_map.py  clearcuts_reports.py  departement.py  departments.py  ecologicalZone.py  ecological_zonings.py  filters.py  images.py  items.py  me.py  referential.py  rules.py  slope.py  token.py  user.py  users.py  watercourse.py
backend/app/schemas/: city.py  clear_cut.py  clear_cut_form.py  clear_cut_map.py  clear_cut_report.py  clear_cut_report_form.py  clearcut.py  clearcut_map.py  clearcut_report.py  department.py  ecologicalZone.py  ecological_zoning.py  filters.py  hateoas.py  image_upload.py  referential.py  registry.py  rule.py  shared.py  slope.py  tag.py  user.py  watercourse.py
backend/app/services/: city.py  clear_cut.py  clear_cut_form.py  clear_cut_map.py  clear_cut_report.py  clear_cut_report_form.py  clearcut.py  departement.py  ecologicalZone.py  ecological_zoning.py  filters.py  get_password_hash.py  referential.py  registries.py  rules.py  s3.py  slope.py  tags.py  user.py  user_auth.py  watercourse.py
backend/data/: anomalie_2024_coupes_rases_05ha.csv  cities_2024.csv  departments_2024.csv
backend/data_proposals/data_eng_integration/: backend-dataeng-integration.mmd
backend/test/: conftest.py  test_items_service.py  test_models.py  test_referential.py  test_user.py
backend/test/common/: clear_cut.py  user.py
backend/test/database/: clear_cut.py  test_models.py
backend/test/integration/: test_clearcuts_map.py  test_user.py
backend/test/services/: test_clear_cut_report.py  test_clearcut.py
backend/test/web_api/: test_clear_cut.py  test_clear_cut_forms.py  test_clear_cuts_map.py  test_clearcut.py  test_clearcuts_map.py  test_departments.py  test_filters.py  test_referential.py  test_rules.py  test_user.py
data_pipeline/: .env  .env.example  .gitignore  Dockerfile  Makefile  Poc_etl_riviere.ipynb  PyKeePass.py  README.md  cron-job.sh  db_conector.py  db_connector_tests.ipynb  docker-compose.yaml  entrypoint.sh  etl_poc.ipynb  mergamerge.ipynb  pyproject.toml  requirements.txt  run.sh  test_s3utils.ipynb  utils.py
data_pipeline/Notebooks_static_layers_processing/: Process_upload_n2000.ipynb  utils.py
data_pipeline/bootstrap/: LOGGING.md  README.md
data_pipeline/bootstrap/notebooks/: seed_database.ipynb
data_pipeline/bootstrap/scripts/: __init__.py  enrich.py  enrich_sufosat_clusters.py  preprocess.py  preprocess_bdforet.py  preprocess_cadastre_cities.py  preprocess_cadastre_departments.py  preprocess_natura2000.py  preprocess_slope.py  preprocess_sufosat.py  run_pipeline.py  seed_database.py
data_pipeline/config/: config.yaml
data_pipeline/dags/: app.py  dag_extract_sufosat.py  dag_transform.py  disjoin_set.py  extract.py  load.py  transform.py
data_pipeline/init_scripts_database/: rivers.py
data_pipeline/pipeline/: README.md
data_pipeline/scripts/: __init__.py  enrich_sufosat_clusters.py  extract.py  main.py  preprocess_cadastre_cities.py  preprocess_cadastre_departments.py  preprocess_natura2000.py  preprocess_slope.py  preprocess_sufosat.py  run_pipeline.py  transform.py  utils.py
data_pipeline/tests/: conftest.py  test_s3.py
data_pipeline/utils/: run.py
(+451 files in other folders)
