[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "s13_brigade_coupes_rases"
version = "0.1.0"
authors = ["DataForGood"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
httpx = "^0.28.1"
ipykernel = "^6.29.5"

[tool.poetry.group.analytics.dependencies]
cartopy = "^0.24.1"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
py7zr = "^0.22.0"
rasterio = "^1.4.3"
tqdm = "^4.67.1"
contextily = "^1.6.2"
numpy = "^2.2.2"
rioxarray = "^0.18.2"
shapely = "^2.0.7"
earthengine-api = "^1.5.1"
geemap = "^0.35.1"
jupyterlab = "^4.3.5"
requests = "^2.32.3"
# gdal is required too, check the setup section in `analytics/README.md`

[tool.poetry.scripts]
docker-start = "docker compose up -d --build"
docker-stop = "docker compose down"

[tool.ruff]
# Same as Black.
line-length = 96
target-version = "py313"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 10
