[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bcr-root"
version = "0.1.0"
authors = ["DataForGood"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
httpx = "^0.28.1"
ipykernel = "^6.29.5"

# See https://docs.astral.sh/ruff/settings
[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Enable isort and flake8-bugbear on top of the defaults
extend-select = ["I", "B"]
