[tool.poetry]
name = "bcr-analytics"
version = "0.1.0"
description = "Environment for data analysis. Explore data and test the data flow for further development."
authors = ["DataForGood"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cartopy = "^0.24.1"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
py7zr = "^0.22.0"
rasterio = "^1.4.3"
tqdm = "^4.67.1"
contextily = "^1.6.2"
numpy = "^2.2.2"
rioxarray = "^0.18.2"
shapely = "^2.0.7"
earthengine-api = "^1.5.1"
geemap = "^0.35.1"
jupyterlab = "^4.3.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
httpx = "^0.28.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# See https://docs.astral.sh/ruff/settings
[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Enable flake8-bugbear and isort on top of the defaults
extend-select = ["I", "B"]
